public/css/app.css
.battery-item {
  position: relative;
  float: left;
  height: 160px;
  margin: 0 5px 5px 0;
  border: solid 1px #bbb;
  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
  border-radius: 5px;
  text-align: center;
  font-size: 11px;
  font-weight: bold;
}

.battery-name {
  position: absolute;
  top: 159px;
  left: -1px;
  width: 160px;
  transform: rotate(-90deg);
  transform-origin: top left;
}

.battery-slot {
  position: relative;
  float: left;
  height: 160px;
  line-height: 160px;
  margin: 0 5px 5px 0;
  border: solid 1px #ccc;
  background-color: #f8f8f8;
  box-shadow: inset 2px 2px 2px rgba(0, 0, 0, 0.1);
  border-radius: 5px;
  text-align: center;
  font-size: 11px;
  font-weight: bold;
  color: #ddd;
}

.battery-action-icon {
  display: none;
  position: absolute;
  z-index: 1;
  top: -8px;
  right: -8px;
  width: 24px;
  height: 24px;
  line-height: 20px;
  font-size: 1.125rem;
  border: solid 1px rgba(255, 255, 255, 0.7);
  border-radius: 50%;
  background: rgba(0, 0, 0, 0.7);
  color: white;
  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
}

.battery-charge {
  background: rgba(0, 162, 0, 0.7);
  line-height: 22px;
}

.battery-action-icon:hover {
  color: white;
  text-decoration: none;
}

.battery-item:hover .battery-action-icon {
  display: inline;
}

.ui-droppable-hover {
  background-color: #fff8da;
}

.ui-draggable-handle {
  -ms-touch-action: none;
  touch-action: none;
}

.op-30 {
  opacity: 0.3;
}

@media (max-width: 767.98px) {
  .battery-action-icon {
    display: inline;
  }

  .sm-ov-a {
    height: 100vh;
    overflow: auto;
  }
}

